# substrate-node20

./: .gitignore  Cargo.toml  README.md  my.sh
bandot-node/: .gitignore  Cargo.toml  README.md
bandot-node/runtime/: Cargo.toml  build.rs
bandot-node/runtime/src/: demo.rs  lib.rs  template.rs  token.rs
bandot-node/runtime/wasm/: Cargo.toml  build.sh
bandot-node/runtime/wasm/src/: lib.rs
bandot-node/src/: chain_spec.rs  cli.rs  main.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  token.rs
scripts/: start_node.sh
src/: chain_spec.rs  main.rs  service.rs
