[package]
authors = ['bandot-org']
build = 'build.rs'
edition = '2018'
name = 'bandot-node'
version = '2.0.0'

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.bandot-node-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'


[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[[bin]]
name = 'bandot-node'
path = 'src/main.rs'
