[package]
name = "skystrate-node"
version = "2.0.0"
authors = ["Skyh"]
build = "build.rs"
edition = "2018"

[profile.release]
panic = "unwind"

[[bin]]
name = "skystrate-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "1.0.0" }
ctrlc = { version = "3.0", features = ["termination"] }

sr-io = { git = "https://github.com/paritytech/substrate.git" }
substrate-cli = { git = "https://github.com/paritytech/substrate.git" }
substrate-client = { git = "https://github.com/paritytech/substrate.git" }
substrate-service = { git = "https://github.com/paritytech/substrate.git" }
substrate-executor = { git = "https://github.com/paritytech/substrate.git" }

network = { package = "substrate-network", git = "https://github.com/paritytech/substrate.git" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate.git" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/paritytech/substrate.git" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate.git" }

primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/paritytech/substrate.git" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate.git" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate.git" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate.git" }

# consensus = { package = "substrate-consensus-aura", git = "https://github.com/paritytech/substrate.git" }
# aura-primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate.git" }

# sr-io = { path = "../core/sr-io" }
# substrate-cli = { path = "../core/cli" }
# primitives = { package = "substrate-primitives", path = "../core/primitives" }
# substrate-executor = { path = "../core/executor" }
# substrate-service = { path = "../core/service" }
# inherents = { package = "substrate-inherents", path = "../core/inherents" }
# transaction-pool = { package = "substrate-transaction-pool", path = "../core/transaction-pool" }
# network = { package = "substrate-network", path = "../core/network" }
# babe = { package = "substrate-consensus-babe", path = "../core/consensus/babe" }
# babe-primitives = { package = "substrate-consensus-babe-primitives", path = "../core/consensus/babe/primitives" }
# grandpa = { package = "substrate-finality-grandpa", path = "../core/finality-grandpa" }
# grandpa-primitives = { package = "substrate-finality-grandpa-primitives", path = "../core/finality-grandpa/primitives" }
# substrate-client = {  path = "../core/client" }
# basic-authorship = { package = "substrate-basic-authorship", path = "../core/basic-authorship" }
skystrate-node-runtime = { path = "runtime" }

[build-dependencies]
vergen = "3"