[package]
name = "bandot-node-runtime"
version = "2.0.0"
authors = ["bandot-org"]
edition = "2018"

[dependencies.babe]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-babe'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.babe-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.substrate-session]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'c63ee7ad8fef5aba30930e56b82e282e2f14d1d5'

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"babe/std",
	"babe-primitives/std",
	"executive/std",
	"indices/std",
	"grandpa/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
]
no_std = []