[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['bandot-node-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'bandot-node-runtime-wasm'
version = '1.0.0'
[dependencies.bandot-node-runtime]
default-features = false
path = '..'
